--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   transition-property: background, box-shadow;
   display: flex;
   flex-direction: column;
+  user-select: none;
 }
 
 .txt-white { color: #fff; }
